fixed card-size-issue on mobile

--- a/src/components/PokemonDetailed/styles.css
+++ b/src/components/PokemonDetailed/styles.css
@@ -1,6 +1,7 @@
 .info {
-  width: 100%;
   text-align: center;
+  font-size: 0.7rem;
+  width: 100%;
 }
 .info th {
   background-color: rgba(0, 0, 0, 0.26);
@@ -8,6 +9,7 @@
 
 .base {
   width: 100%;
+  font-size: 0.7em;
   text-align: center;
 }
 .base th {
